Updates , code refactorization , layout updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="main_activity_username">Username</string>
     <string name="main_activity_send">Send</string>
     <string name="no_tittle">No Tittle</string>
+    <string name="PostNumber">Number of posts (20 - 50)</string>
 
 
     <string-array name="type_arrays">
